# mdweek

./: .gitignore  pyproject.toml  readme.md  setup.cfg
mdweek/: __init__.py  week.py
samples/: sample.ipynb
tests/: test_iso_week_config.py  test_week.py  test_week_calculator.py
tests/resources/: calendar2.csv
