[tool.poetry]
name = "mdweek"
version = "1.1.4"
description = "a utility package handling week based calculations"
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
